@@ -1,3 +1,11 @@
+2022-05-22  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* version.h:
+	Bump version to 4.00 (22 may 2022).
+	* bibtex.c, utils.c, version.h:
+	Show "Release version" and TeX Live version at the first line
+	of a banner.
+
 2022-05-17  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* version.h:
